feat: :sparkles: adds comments with reply and like feature
Ref: PK-63

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400&family=Nanum+Pen+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
